Removed floats, margins, fixed heights, overflow, display inline-block properties to start making sit responsive

--- a/css/main.css
+++ b/css/main.css
@@ -35,15 +35,11 @@ p {
 
 .content-wrapper {
     width: 1200px;
-    margin: 0 auto;
-    overflow: auto;
 }
 
 /******** HEADER STYLES ********/
 header h1 {
     width: 300px;
-    float: left;
-    margin: 0;
     padding: 36px 0;
 }
 
@@ -53,8 +49,6 @@ header h1 span {
 
 header nav {
     width: 300px;
-    float: right;
-    margin: 0;
     padding: 44px 0;
     text-align: center;
 }
@@ -99,7 +93,6 @@ header nav ul li a {
 .section-two,
 .section-three {
     box-sizing: border-box;
-    float: left;
     padding-left: 40px;
     padding-right: 40px;
 }
